--- a/style.css
+++ b/style.css
@@ -3243,6 +3243,9 @@ font-style:normal;
 font-size:1rem;
 }
 
+/*header高さ変更*/
+
+
 
 /*main_navi サイズ・色変更*/
 .search-form {
@@ -3263,7 +3266,7 @@ background-color:#4387E8;
 
 
 .navbar {
-background-color:#E25FB0;
+background-color:#23282D;
 }
 /*カテゴリー別アーカイブ表示変更*/
 .archive-title {
@@ -3279,9 +3282,55 @@ background:none;
 .archive-title:before {
 content:'★';
 }
+/*footerの色なし　背景画像*/
+.site-footer .sidebar-container  {
+background-color:none;
+background-image:url(http://localhost/wp1/wp-content/uploads/2015/12/s_picjumbo.com_HNCK9437.jpg);
+background-repeat:no-repeat;
+background-position:center top;
+background-size:cover;
+background-attachment:fixed;
+}
+
+.site-info {
+display:none;
+}
+
 
 /*サイドバーfooter突き刺さる問題解決*/
 .site-main {
 min-height:1000px;
 }
 
+/*表示コンテンツを変える*/
+.entry-meta {
+display:none;
+}
+
+.category-blog .entry-meta {
+display:block;
+}
+
+.home .site:after {
+content:'';
+display:block;
+width:100%;
+height:3500px;
+background-image:url(http://localhost/wp1/wp-content/uploads/2015/12/s_picjumbo.com_HNCK7388.jpg);
+background-repeat:no-repeat;
+background-position:center bottom;
+background-size:cover;
+background-attachment:fixed;
+}
+
+.home .site-footer:after{
+content:'we are professional';
+color:#fff;
+text-align:center;
+font-size:6rem;
+display:block;
+width:100%;
+height:500px;
+line-height:500px;
+background-color:#D31329;
+}
