--- a/style.css
+++ b/style.css
@@ -3292,6 +3292,30 @@ background-size:cover;
 background-attachment:fixed;
 }
 
+.home .site:after {
+content:'';
+display:block;
+width:100%;
+height:3500px;
+background-image:url(http://localhost/wp1/wp-content/uploads/2015/12/s_picjumbo.com_HNCK7388.jpg);
+background-repeat:no-repeat;
+background-position:center bottom;
+background-size:cover;
+background-attachment:fixed;
+}
+/*topページの時だけfooterの続きで写真が登場しているように見せる*/
+.home .site-footer:after{
+content:'we are professional';
+color:#fff;
+text-align:center;
+font-size:6rem;
+display:block;
+width:100%;
+height:500px;
+line-height:500px;
+background-color:#D31329;
+}
+
 .site-info {
 display:none;
 }
@@ -3311,26 +3335,4 @@ display:none;
 display:block;
 }
 
-.home .site:after {
-content:'';
-display:block;
-width:100%;
-height:3500px;
-background-image:url(http://localhost/wp1/wp-content/uploads/2015/12/s_picjumbo.com_HNCK7388.jpg);
-background-repeat:no-repeat;
-background-position:center bottom;
-background-size:cover;
-background-attachment:fixed;
-}
 
-.home .site-footer:after{
-content:'we are professional';
-color:#fff;
-text-align:center;
-font-size:6rem;
-display:block;
-width:100%;
-height:500px;
-line-height:500px;
-background-color:#D31329;
-}
